Update V2RayCommandExecutorWithTermination.java
替换 Runtime.getRuntime().exec(String)：

原有代码： 使用了 Runtime.getRuntime().exec(command) 方法。
新代码： 使用了 ProcessBuilder 类，以构建并启动新的进程执行终止命令。
适应性增强：

原有代码： 直接依赖于操作系统类型判断执行的命令。
新代码： 通过 ProcessBuilder 在不同操作系统上动态构建命令，增强了代码的适应性和可维护性。